@@ -7,6 +7,9 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- add grafana relation for slurmctld
+- add influxdb relation for accouting and profiling of jobs with the SLURM
+  InfluxDB plugin
 - add acct gather configuration options
 - handle update-status hook to constantly give feedback about charms' status
 - add .jujuignore to reduce size of final charm files
